Fix text spacing

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ button {
   padding: 5px 10px;
 }
 
-h1, h3, h4 {
+h1, h3 {
   max-width: 90vw;
   text-align: center;
 }
@@ -36,14 +36,8 @@ h1 {
 
 h3 {
   font-size: 1.2em;
-  font-weight:600;
-  margin-bottom: 1em;
-}
-
-h4 {
-  font-size: 1em;
   font-weight:300;
-  margin-bottom: 2.2em;
+  margin-bottom: 1em;
 }
 
 #play-area .right-container button {
